<resources>
    <string name="app_name">NMSTU Directory</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Multidisciplinary\nCollege of MST\nUniversity\nG.I. Nosova</string>
    <string name="nav_header_subtitle">example, address</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_theme">Change theme</string>
    <string name="imageViewCollege">College photos</string>
    <string name="menu_info">Info</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_directions">Directions</string>
    <string name="menu_about">About app</string>
    <string name="menu_short_history">Short history</string>
    <string name="gallery_text">Photos were made by Gazim</string>
    <string name="about_text">Project about college was made by 4 students from «ISPp&#8211;20&#8211;2»:\nSoliev Gazimyan - made this app and added photos\nNikitin Yaroslav - found the information\nFilippova Veronica - gave the idea to make this application and made the introduction\nYashina Vladislava - found the information</string>
    <string name="info_text">"    The Multidisciplinary College (MDC) is a modern educational institution operating in the university complex of the Moscow State Technical University. GI Nosov\". It consisted of three colleges and a technical school: “Magnitogorsk Industrial College named after N.I. Makarov”, “Magnitogorsk State Professional and Pedagogical College”, “Magnitogorsk Construction College” and “Magnitogorsk Trade and Economic College”.\n\n    Today, the college is studying full–time more than 2.6 thousand students in the enlarged groups of specialties:\n\n    &#8211;construction technique and technology;\n    &#8211;informatics and computer technology;\n    &#8211;electric and heat power engineering;\n    &#8211;mechanical engineering;\n    &#8211;applied geology, mining, oil and gas business and geodesy;\n    &#8211;material technology;\n    &#8211;technique and technology of land transport;\n    &#8211;economics and Management;\n    &#8211;service and tourism;\n    &#8211;history and archeology.\n   \n    A multidisciplinary college today is an educational complex, where all conditions have been created for the training of competent specialists.\n\n    The multidisciplinary college is included in the TOP&#8211;500 educational organizations of the Russian Federation implementing secondary vocational education programs, as well as in the TOP&#8211;10 educational organizations of the constituent entity of the Russian Federation based on the results of monitoring the quality of training in 2020.\n\n    The college has a modern material and technical base: laboratories and training and production workshops of the college are equipped with the necessary equipment, stands, teaching and visual aids, as well as teaching and monitoring materials in accordance with the specifics of training sessions. The educational process for receiving education by students with disabilities is carried out in specially equipped premises of the Multidisciplinary College.\n\n    Special attention in the college is paid to the development of the information and educational (electronic) environment (IEEE), which is aimed at the formation of a creative, intellectual and socially developed personality, formed on the basis of a variety of information educational resources, modern information and communication tools and pedagogical technologies.\n\n    The specialists are trained by a creative, efficient teaching staff, which numbers 141 teachers, of which: 77 teachers have the highest qualification category, 16 candidates of science, four teachers are Honorary Workers of Education. More than 16 teachers of the college are acting experts for the demonstration exam, 4 are experts with the right to hold a regional championship held according to WorldSkills standards, 1 expert is a master.One of the most important tasks of the management of the Multidisciplinary College is to provide continuous education in the conditions of the university complex, which is implemented in several directions:\n\n    the formation of a stable interest among MPC students in participating in scientific and creative projects, research conferences, forums, competitions.\n\n    expanding the interaction of teachers of graduating subject&#8211;cycle commissions with specialized departments of the university, meetings of students with leading teachers of departments and famous alumni.\n\n    Every year, decades and weeks of specialties and disciplines are held, within the framework of which there are intracollegiate olympiads, competitions of professional skills, scientific and technical exhibitions, open defenses of term papers and final qualification works in the form of diploma projects, newspaper contests and other events that contribute to the development of creative, scientific and research activities of students.\n\n    Under the guidance of teachers, students of the multidisciplinary college defend the honor of the educational institution at olympiads and competitions of various levels &#8211; from urban to all&#8211;Russian. Among them:\n\n    International Certification Olympiad \"Trajectory of the Future\" (Microsoft, English, Photoshop, 4D modeling) &#8211; 2020 &#8211; 10 people received certificates Microsoft specialist, 2019 reached the final in the Microsoft nomination (Word and Excel &#8211; 1st place)\n\n    All&#8211;Russian competition for popularizers of science \"Science without Borders\" &#8211; diploma, 1st place, 2019All&#8211;Russian sectoral competition of diploma projects of the Association of educational institutions of the metallurgical complex of Russia; nomination Diploma projects in metallurgical specialties &#8211; diploma for the 2nd place; 12.2019\n\n    All&#8211;Russian Olympiad of professional skills of students in the specialty SPO UGS SPO 22.00.00 Technologies of materials &#8211; diploma for the 2nd place, 2019\n\n    All&#8211;Russian competition of creative projects and ideas for the development of social infrastructure \"NEOTERA\", specialty 08.02.01 Construction and operation of buildings and structures &#8211; 1st degree diploma, 2018\n\n    VII open regional championship \"Young professionals\" (WorldSkills Russia) South Urals 2019&#8211;2020 in the competence \"Electrical installation\" &#8211; diploma for the 3rd place, 2019\n\n    VII open regional championship \"Young Professionals\" (WorldSkills Russia) South Ural 2019&#8211;2020 in the competence \"Maintenance and repair of relay protection and automation\" &#8211; diploma for the 2nd place, diploma for professionalism, 2019\n\n    Regional Olympiad of professional skills of students under secondary vocational education programs in educational institutions of the Chelyabinsk region in an enlarged group of specialties 13.00.00 \"Electricity and heat power engineering\" &#8211; diploma for the 1st place, 2020.\n\n    Regional Olympiad of professional skills of students enrolled in secondary vocational education programs in educational institutions of the Chelyabinsk region in the enlarged group of the specialty 22.00.00 \"Technologies of materials\", diploma for the 1st place, 2020\n\n    Ural regional championship in sports programming (qualification round) specialty 09.02.03 Programming in computer systems, 09.02.07 Information systems and programming, 2019\n\n    According to the results of the city Spartakiad among students in training programs for mid&#8211;level specialists in the city of Magnitogorsk in the 2019&#8211;2020 academic year, the teams of college boys and girls became bronze medalists in track and field athletics, the best in volleyball and a chess tournament, in shooting, the women's team took 1st place, and the men's &#8211; 3rd place. According to the results of all sports competitions, the junior team of the Multidisciplinary College took FIRST PLACE, and the women's team became SECOND.\n\n    The college pays special attention to creating a comfortable environment. Work is actively underway to improve the premises of the college and student campus. In 2019, its own public garden appeared on the territory of the MpK.\n\n    In addition to comfortable recreation areas, there is a stele with the logos of the university and the All&#8211;Russian Trade Union of Education, installed in the park in honor of the 100th anniversary of the student trade union movement in Russia.\n\n    In 2020, on the basis of the college, a wide&#8211;profile stadium with an obstacle course of 7,000 square meters was opened, including a jogging track, two football fields, equipped basketball and volleyball courts, horizontal bars and special equipment for physical education.\n\n    The college staff pays much attention to the formation of the socio&#8211;cultural environment: there are more than 15 student associations of various orientations in the college, interaction with the student trade union committee of MSTU, with city youth associations has been established.\n\n    The hallmark of MpK is a quality education, a caring attitude towards students, a strong school of mentoring and class leadership, and a strong connection with social partners."</string>
    <string name="college_site_link">www.magtu.ru</string>
</resources>