<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_short_history"
            android:title="@string/menu_short_history"
            android:icon="@android:drawable/ic_menu_recent_history" />
        <item
            android:id="@+id/nav_info"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_info" />
        <item
            android:id="@+id/nav_directions"
            android:icon="@android:drawable/ic_menu_zoom"
            android:title="@string/menu_directions" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/menu_about" />
    </group>
</menu>