<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_short_history">

    <fragment
        android:id="@+id/nav_info"
        android:name="com.gazim.directory.ui.home.HomeFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.gazim.directory.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_directions"
        android:name="com.gazim.directory.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_directions"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.gazim.directory.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_short_history"
        android:name="com.gazim.directory.ui.history.ShortHistoryFragment"
        android:label="@string/menu_short_history"
        tools:layout="@layout/fragment_short_history" />


</navigation>