<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                app:cardCornerRadius="15dp"
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:adjustViewBounds="true"
                        android:id="@+id/imageViewCollege"
                        android:contentDescription="@string/imageViewCollege" />

                    <ImageView
                        android:adjustViewBounds="true"
                        android:id="@+id/imageViewCollege0"
                        android:contentDescription="@string/imageViewCollege" />

                    <ImageView
                        android:adjustViewBounds="true"
                        android:id="@+id/imageViewCollege1"
                        android:contentDescription="@string/imageViewCollege" />

                    <ImageView
                        android:adjustViewBounds="true"
                        android:id="@+id/imageViewCollege2"
                        android:contentDescription="@string/imageViewCollege" />

                    <ImageView
                        android:adjustViewBounds="true"
                        android:id="@+id/imageViewCollege3"
                        android:contentDescription="@string/imageViewCollege" />
                    <ImageView
                        android:adjustViewBounds="true"
                        android:id="@+id/imageViewCollege4"
                        android:contentDescription="@string/imageViewCollege" />

                    <ImageView
                        android:adjustViewBounds="true"
                        android:id="@+id/imageViewCollege5"
                        android:contentDescription="@string/nav_header_desc" />

                </TableLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:fontFamily="cursive"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/gallery_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>